# python-bootstrapper

./: .gitignore  README.md  pyproject.toml
examples/circle (default)/: main.py
examples/cube/: customize.py  main.py
examples/cube (all overriden)/: customize.py  main.py
examples/rectangle/: customize.py  main.py
examples/rectangle (area and name overridden)/: customize.py  main.py
examples/sphere/: main.py
examples/sphere (plugin not found)/: main.py  not-plugin-name.py
examples/sphere (plugin-not-found)/: main.py  not-plugin-name.py
package/: __init__.py  area.py  calculations.py  constants.py  main.py  volume.py
